force-app/main/default/objects/Budget_Investments__c.object
<CustomObject>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Assumptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_for_School__c</fullName>
        <label>Cost for School</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Investment_Type__c</fullName>
        <label>Investment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buildings</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Budget__c</fullName>
        <label>School Budget</label>
        <referenceTo>School_Budget__c</referenceTo>
        <relationshipLabel>Budget - Investments</relationshipLabel>
        <relationshipName>Budget_Investments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Budget - Investments</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget - Investments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Locked</fullName>
        <active>true</active>
        <description>Prevents New or Edits if the budget is Locked</description>
        <errorConditionFormula>TEXT(School_Budget__r.Locked__c) =&quot;Yes&quot;</errorConditionFormula>
        <errorMessage>This School Budget is Locked. Please contact the Group Administrator for Details</errorMessage>
    </validationRules>
</CustomObject>